# guardFall

./: .gitignore  LICENSE  README.md  devSetting.md  getgenai.py  main.py  pyproject.toml  requirements.txt  start.sh  stop.sh  streamlit_app.py
.github/ISSUE_TEMPLATE/: feature_request.md
.streamlit/: README.md  secrets.toml
db/: guardfall.db
page/: MERMAID.md  README.md  analyzermonitor.py  analyzermov.py  applymodel.py  createmodel.py  home.py  link.py  motoring.py  multi_model_dashboard.py  setting.py
page/model/: compare_model.py  createmodel.py  createmodel_ensemble.py  createmodel_lstm.py
script/: README.md  db.py  fallpredict.py  fallpredict_test.py  getposedata.py  model_loader.py  sendmsg.py  util.py
test/: bakcode.md  monitor_test.py  motoring.py
user/csv/: merged_user_data.csv  강건너다넘어짐_landmarks.csv  강건너다넘어짐_userModel_landmarks.csv  겨울철 빙판길에서 넘어지는 웃긴 영상 모음(꽈당)_landmarks.csv  겨울철 빙판길에서 넘어지는 웃긴 영상 모음(꽈당)_userModel_landmarks.csv  김려욱넘어지는영상_kerasModel_landmarks.csv  김려욱넘어지는영상_userModel_landmarks.csv  넘어지는 영상_landmarks.csv  넘어지는 영상_userModel_landmarks.csv  눈길거리넘어짐_userModel_landmarks.csv  등산넘어지는영상 _landmarks.csv  등산넘어지는영상 _userModel_landmarks.csv  빗길넘어짐_landmarks.csv  빙판길 꽈당_2_userModel_landmarks.csv  빙판길 꽈당_landmarks.csv  아기넘어짐_landmarks.csv  아기넘어짐_userModel_landmarks.csv  전세계 꽈당1_userModel_landmarks.csv  전세계 꽈당3_landmarks.csv  차밑으로떨어짐_landmarks.csv  커플넘어짐_landmarks.csv  하반신 마비 사고영상_userModel_landmarks.csv
user/model/: fall_model.keras  fall_model.pkl  fall_model_denseModel.keras  fall_model_denseModel.pkl  fall_model_ensembleModel.keras  scaler.pkl  (+2 more)
(+51 files in other folders)
