[project]
name = "guardfall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib==1.4.2",
    "mediapipe==0.10.21",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "pandas==2.2.2",
    "plotly==5.20.0",
    "python-telegram-bot==22.0",
    "scikit-learn==1.4.2",
    "streamlit==1.27.0",
    "streamlit-option-menu==0.3.6",
    "streamlit-webrtc==0.45.0",
]
